# antwoordenboekjes

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  server.cpp
headers/: csv.hpp
server/: convert.cpp  server.cpp
server/headers/: csv.hpp
server/static/js/: script.js
server/static/json/: vakken.json
server/templates/: main.html
static/css/: style.css
static/js/: script.js
static/json/: vakken.json
templates/: main.html
